# live-mtg

./: .gitignore  AI-CALLS.md  LICENSE  README.md  README.npm.md  VERSION  demo-run.sh  index.html  install.ps1  install.sh  lib.sh  live-mtg.sh  make-learn-slides.sh  make-map-slide.py  make-mindmap.py  make-minutes-deck.py  make-slides.sh  meeting_flow.py  meeting_flow_ai.py  minutes-paper-template.html  package.json  radial-map.js  server.py  slide-work-guide.md  slide-work-pattern-examples.html  slide-work-template.html  slides-template.html  ui-redesign-spec.md  worker.sh
.github/: FUNDING.yml
cli/: live-mtg.mjs
defaults/: whispermlx-overrides.txt
desktop/: .gitignore  README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: meeting-flow-spec.md
playbooks/: ヒアリング.md  商談.md
scripts/: build-demo-gif.sh  build-npm-package.mjs  capture-ai-proposal-screens.py  capture-demo-gif.py  check-index-js.mjs  eval-prompts.py  live-diarize-worker.py  run-slide-ai.py  sync-slide-work.py  test-analysis-coverage.py  test-audio-import.py  test-branding.py  test-cancellable-jobs.py  test-cli-home.py  test-cli-onboarding.mjs  test-cli-supervisor.mjs  test-finalize-corrections.py  test-i18n.py  test-meeting-flow-ai.py  test-meeting-flow-integration.py  test-meeting-flow.py  test-minutes-deck.py  test-parallel-analysis.py  test-recording-integrity.py  test-slide-work.py  test-speaker-diarization.py  test-strategy-identity.py  test-ui.py  (+1 more)
(+12 files in other folders)
